tests/errors/unexpected_keyword_argument.py
# expect_error: unexpected keyword argument
def add(a, b):
    return a + b

print(add(a=1, c=2))